minor changes to column sizes

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <div class="container">
   <div class="page-header"><h2>Personalize Your Flag</h2></div>
   <div class="row">
-    <div class="col-md-4 col-lg-1">
+    <div class="col-lg-1">
       <h4>Colors</h4>
       <input type="color" id="color1" class="form-control" onchange="draw()" value=#FFFFFF>
       <input type="color" id="color2" class="form-control" onchange="draw()" value=#7F7F7F>
       <input type="color" id="color3" class="form-control" onchange="draw()" value=#000000>
     </div>
-    <div class="col-md-4 col-lg-4">
+    <div class="col-lg-4">
       <h4>Style</h4>
       <div class="btn-group" id="style" data-toggle="buttons">
         <label class="btn btn-primary active" data-value="0">
@@ -146,7 +146,7 @@
         </label>
       </div>
     </div>
-    <div class="col-md-4 col-lg-6">
+    <div class="col-lg-6">
       <h4>Preview</h4>
       <canvas id="mainFlag" width="240" height="160" style="border:2px solid">
         Your browser does not support the HTML5 canvas tag.
